@@ -8,6 +8,7 @@ import com.devonfw.tools.ide.environment.EnvironmentVariables;
 import com.devonfw.tools.ide.git.GitContext;
 import com.devonfw.tools.ide.migration.IdeMigrator;
 import com.devonfw.tools.ide.os.SystemInfo;
+import com.devonfw.tools.ide.step.Step;
 import com.devonfw.tools.ide.tool.IdeasyCommandlet;
 import com.devonfw.tools.ide.version.VersionIdentifier;
 
@@ -35,15 +36,21 @@ public class StatusCommandlet extends Commandlet {
 
   @Override
   public void run() {
+    Step step = this.context.newStep(true, "Show IDE_ROOT and IDE_HOME");
+    step.run(this.context::logIdeHomeAndRootStatus);
+    step = this.context.newStep(true, "Show online status");
+    step.run(this::logOnlineStatus);
 
-    this.context.logIdeHomeAndRootStatus();
-    logOnlineStatus();
     if (this.context.getIdeHome() != null) {
-      logSettingsGitStatus();
-      logSettingsLegacyStatus();
-      logMigrationStatus();
+      step = this.context.newStep(true, "Show git status");
+      step.run(this::logSettingsGitStatus);
+      step = this.context.newStep(true, "Show legacy status");
+      step.run(this::logSettingsLegacyStatus);
+      step = this.context.newStep(true, "Show migration status");
+      step.run(this::logMigrationStatus);
     }
-    checkForUpdate();
+    step = this.context.newStep(true, "Check for updates of IDEasy");
+    step.run(this::checkForUpdate);
   }
 
   private void checkForUpdate() {
